--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,8 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
-ui/node_modules/
+front-code/node_modules/
+server/.classpath
+server/.factorypath
+server/.project
+server/.settings/
